--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "third_party/libc++/trunk"]
 	path = third_party/libc++/trunk
-	url = https://chromium.googlesource.com/chromium/llvm-project/libcxx.git
+	url = https://chromium.googlesource.com/external/github.com/llvm/llvm-project/libcxx.git
 [submodule "third_party/libc++abi/trunk"]
 	path = third_party/libc++abi/trunk
-	url = https://chromium.googlesource.com/chromium/llvm-project/libcxxabi.git
+	url = https://chromium.googlesource.com/external/github.com/llvm/llvm-project/libcxxabi.git
