--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/libc++/trunk"]
 	path = third_party/libc++/trunk
 	url = https://chromium.googlesource.com/external/github.com/llvm/llvm-project/libcxx.git
+[submodule "third_party/libunwind/trunk"]
+	path = third_party/libunwind/trunk
+	url = https://chromium.googlesource.com/external/github.com/llvm/llvm-project/libunwind.git
